# amplifier-bundle-metacog-code-quality

./: .gitignore  README.md  bundle.md  pyproject.toml
agents/: documentation-checker.md  performance-analyzer.md  quality-aggregator.md  security-scanner.md  static-analyzer.md
context/: code-smells-patterns.md  documentation-standards.md  performance-patterns.md  security-patterns.md
examples/: example-analysis.md
tests/: conftest.py  test_collection.py
tests/test_agents/: __init__.py  test_agent_structure.py
tests/test_context/: __init__.py  test_context_files.py
