[project]
name = "code-quality"
version = "0.1.0"
description = "Code quality analysis agents for Amplifier - static analysis, security scanning, performance analysis, and documentation checking"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Amplifier Contributors"}
]

[project.urls]
Homepage = "https://github.com/microsoft/amplifier"
Repository = "https://github.com/microsoft/amplifier-collection-code-quality"

[tool.amplifier.collection]
author = "Amplifier Team"
capabilities = [
    "static-analysis",
    "security-scanning",
    "performance-analysis",
    "documentation-checking",
    "quality-aggregation",
    "code-quality-reporting",
]

[tool.amplifier.collection.requires]
amplifier-core = ">=0.1.0"
amplifier-profiles = ">=0.1.0"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
